infra/modules/dms-networking/security.tf
# Add Security Groups for VPC -> DMS here

# We need to attach this security group to our DMS instance when created
resource "aws_security_group" "dms" {
  # checkov:skip= CKV2_AWS_5:DMS instance not created yet
  name        = "dms"
  description = "Database DMS security group"
  vpc_id      = var.our_vpc_id
}

# Allow all egrees traffic from DMS instance, which allows it to (for example)
# request secrets from AWS Secrets Manager.
resource "aws_vpc_security_group_egress_rule" "all_egress" {
  description       = "Allow all egress"
  from_port         = "-1"
  to_port           = "-1"
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
  security_group_id = aws_security_group.dms.id
}

resource "aws_vpc_security_group_egress_rule" "postgres_egress_from_dms" {
  description       = "Allow outbound requests to database from DMS"
  cidr_ipv4         = local.our_target_cidr_block
  from_port         = 5432 # postgres default port
  to_port           = 5432
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.dms.id
}

resource "aws_vpc_security_group_ingress_rule" "postgres_ingress_from_dms" {
  description       = "Allow inbound requests to database from DMS"
  cidr_ipv4         = local.our_target_cidr_block
  from_port         = 5432 # postgres default port
  to_port           = 5432
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.dms.id
}

resource "aws_vpc_security_group_egress_rule" "oracle_egress_from_dms" {
  description       = "Allow outbound requests to database from DMS"
  cidr_ipv4         = local.their_source_cidr_block
  from_port         = 1521 # oracle default port
  to_port           = 1521
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.dms.id
}

resource "aws_vpc_security_group_ingress_rule" "oracle_ingress_from_dms" {
  description       = "Allow inbound requests to database from DMS"
  cidr_ipv4         = local.their_source_cidr_block
  from_port         = 1521 # oracle default port
  to_port           = 1521
  ip_protocol       = "tcp"
  security_group_id = aws_security_group.dms.id
}
